--- a/wtbui/src/assets/scss/common.scss
+++ b/wtbui/src/assets/scss/common.scss
@@ -31,3 +31,13 @@ ul {
   padding: 0;
   list-style: none;
 }
+
+[draggable] {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  /* Required to make elements draggable in old WebKit */
+  -khtml-user-drag: element;
+  -webkit-user-drag: element;
+}
